# LLM-Data-set-develop-studio

./: .env.example  .gitignore  README.md  architecture_pipeline.md  competitor_analysis.md  competitor_analysis_list.md  feature-not-applied.Md  feature_roadmap.md  gemini_integration_report.md  hypasia_features.md  hypasia_flywheel.db  hypasia_versions.db  implementation_plan11.md  marketplace.db  pyproject.toml  test_all.py  test_upload.py  user_testing_manual.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FEATURES.md  SCORING_RUBRIC.md
src/: healing.db  hypasia_flywheel.db  hypasia_marketplace.db  hypasia_versions.db  marketplace.db
src/hypasia/: __init__.py  cli.py  config.py  schema.py
src/hypasia/api/: main.py
src/hypasia/assistant/: __init__.py
src/hypasia/augmentation/: __init__.py  adversarial.py  dpo.py  rephrase.py  translate.py
src/hypasia/cleaner/: __init__.py  dedup.py  ip_washer.py  language.py  length.py  normalise.py  pii.py
src/hypasia/evaluation/: __init__.py  benchmark.py
src/hypasia/exporter/: __init__.py  hf_push.py  jsonl.py  parquet.py
src/hypasia/finetuning/: __init__.py  prompt_compiler.py
src/hypasia/fingerprint/: __init__.py  embed.py
src/hypasia/flywheel/: __init__.py  collector.py  queue.py  trigger.py
src/hypasia/marketplace/: __init__.py  store.py
tests/: test_backend.py  test_cleaner.py  test_exporter.py  test_scorer.py
web/: eslint.config.js  package-lock.json  package.json
web/src/: App.jsx  App.test.jsx  i18n.js  index.css  setupTests.js
(+112 files in other folders)
